<resources>
    <string name="app_name">MyMealDiary</string>

    <!-- Shared Preferences -->
    <string name="api_preferences_key">API_KEY</string>
    <string name="date_preferences_key">SAVED_DATE</string>
    <string name="goal_preferences_key">SAVED_GOAL</string>
    <string name="name_preferences_key">SAVED_NAME</string>
    <string name="theme_preferences_key">THEME_SETTINGS</string>
    <string name="dark_theme_preference_value">DARK_THEME</string>
    <string name="light_theme_preference_value">LIGHT_THEME</string>
    <string name="system_theme_preference_value">SYSTEM_THEME</string>

    <!-- Fragment Labels -->
    <string name="diary">My Meal Diary</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="daily_nutrition">Total Daily Nutrition</string>
    <string name="food">Food</string>
    <string name="settings">Settings</string>
    <string name="search_food">Search Food</string>
    <string name="about">About</string>
    <!-- Counter -->
    <string name="remaining_calories">Remaining calories</string>
    <string name="goal">Goal</string>
    <string name="minus"> - </string>
    <string name="meals">Meals</string>
    <string name="equals"> = </string>
    <string name="remaining">Remaining</string>
    <string name="remaining_value">%.0f kcal</string>
    <!-- Food -->
    <string name="food_calories">%.1f kcal</string>
    <string name="food_nutrient">%.1f g</string>
    <string name="food_micronutrient">%.1f mg</string>
    <!-- Units -->
    <string name="kcal">kcal</string>
    <!-- Dialog -->
    <string name="set_calories_goal">Set calories goal</string>
    <string name="save">Save</string>
    <string name="serving_size">Serving Size</string>
    <!-- Food List View -->
    <string name="add_food">Add Food</string>
    <!-- Settings -->
    <string name="goal_not_set">Not set</string>
    <string name="goal_set">Current goal: %s kcal</string>
    <string name="goal_summary">Change the daily calories goal</string>
    <string name="api_dialog_title">Leave it blank to use the default one</string>
    <string name="api_key_summary">Currently using the default key</string>
    <string name="api_key_summary_set">Current key: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">MY MEAL DIARY</string>
    <string name="welcome_message">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <!--    Fragment Calculator-->
    <string name="kg">kg</string>
    <string name="years">years</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="activity">Activity</string>
    <string name="calculate">Calculate</string>
    <string name="your_calculated_bmr">You calculated BMR is:</string>
    <string name="apply">Apply</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="item_required">Required</string>
    <string name="calculate_bmr">Calculate BMR</string>
    <string name="get_started">Get Started</string>
</resources>